# Trading-Engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  conanfile.txt
scripts/: webhook_generator.py
src/: HttpClient.cpp  HttpClient.h  Queue.cpp  Queue.h  TradeDatabase.cpp  TradeDatabase.h  TradeExecution.cpp  TradeExecution.h  TradeQueue.cpp  TradeQueue.h  Trading-Engine.cpp  Trading-Engine.h  httpserver.cpp  httpserver.h  server.cpp  server.h
